--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-	<script>
+	<script src="firebase.js">
 	  // Initialize Firebase
-	  
 	</script>
 	<script src="diceroll.js"></script>
 </div>
