--- a/index.html
+++ b/index.html
@@ -9,27 +9,22 @@
 			width:200px;
 			height:200px;
 		}
-		#roller{
-			width:200px;
-			height:50px;
-			background: red;
-		}
 		#title{
 			font-size:40;
-			color:blue;
+			color:white;
 		}
 		#outcome{
 			font-size:60;
-			color:red;
+			color:white;
 		}#text1{
 			font-size:40;
 			color: red;
 		}#txt2{
 			font-size:20;
-			color: yellow;
+			color: white;
 		}#recentrolls{
 			font-size:20;
-			color: yellow;
+			color: white;
 		}
 	</style>
 </head>
