--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 			color:white;
 		}#text1{
 			font-size:40;
-			color: red;
+			color: white;
 		}#txt2{
 			font-size:20;
 			color: white;
 		}#recentrolls{
 			font-size:20;
+			color: white;
+		}#Name{
+			color: white;
+		}#dicenumber{
 			color: white;
 		}
 	</style>
