--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div>
 	<h1 id="title">Risk Dice Simulator</h1>
 	<img id="dice" src="http://www.clipartbest.com/cliparts/9c4/end/9c4endxoi.png"></img>
-	<p id="text1" ></p>
+	<span id="text1" ></span>
 	<p id="outcome"></p>
 	<!-- <button id="roller">Roll Dice</button> -->
 	<form id="inputs">
